[workspace]

[package]
name = "waddle"
version = "0.0.0"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.12.0"
serde = "1.0.89"
serde_derive = "1.0.89"
winnow = "0.5.26"
bilge = "0.2.0"

# TODO: Remove
generational-arena = "0.2.2"
bitfield = "0.13.1"
pest = "2.1.0"
pest_derive = "2.1.0"

waddle_derive = { path = "waddle_derive" }
miette = "5.10.0"
thiserror = "1.0.50"
slotmap = "1.0.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
